# MLX90640_pico

./: .gitignore  CMakeLists.txt  README.md  main.cpp  receive_and_visualize.py
BNO055/: receive_BNO055.py
dualcore/: main_threaded.cpp  tusb_config.h
host_python/: receive.py  requirements.txt
pico_arduino/: pico_arduino.ino
pico_circuitpython/: boot.py  main.py  test_sender.py
pico_circuitpython/utils/: wifi_utils.py
pico_micropython/: main.py
pico_sdk_version/: CMakeLists.txt  main.cpp
receiver/: receive.py
